# four-in-a-row

./: .gitlab-ci.yml  COPYING.themes  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  four-in-a-row.doap  meson.build
build-aux/: org.gnome.Four-in-a-row.json
data/: .cvsignore  .gitignore  Makefile.am  catseyes_40x40.gnect  classic_40x40.gnect  classic_50x50.gnect  clean_40x40.gnect  clean_40x40_nightfall.gnect  clean_50x50.gnect  clean_50x50_nightfall.gnect  default.gnect  emulator_48x32.gnect  four-in-a-row.6  four-in-a-row.appdata.xml  four-in-a-row.appdata.xml.in  four-in-a-row.css  four-in-a-row.desktop.in  four-in-a-row.desktop.in.in  four-in-a-row.ui  glassy_40x40.gnect  glassy_40x40_grotty.gnect  glassy_50x50.gnect  glassy_50x50_grotty.gnect  gnect-client.dsc.in  gnect-server.dsc.in  gnect.6  gnect.desktop  gnect.desktop.in  gnect.desktop.in.in  gnect.room  gnect.schemas  gnect.schemas.in  gnect.soundlist  gnect.soundlist.in  meson.build  org.gnome.Four-in-a-row.appdata.xml.in  org.gnome.Four-in-a-row.desktop.in  org.gnome.Four-in-a-row.gschema.xml  org.gnome.Four-in-a-row.metainfo.xml.in  org.gnome.Four-in-a-row.service.in  (+8 more)
data/icons/: Makefile.am  meson.build
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
data/ui/: adaptative-window.ui  fiar-screens.ui  four-in-a-row.ui  game-actionbar-placeholder.ui  help-overlay.ui  history-button.ui
help/: .gitignore  ChangeLog  ChangeLog.old  LINGUAS  Makefile.am  gnect.omf.in  meson.build
help/C/: .cvsignore  Makefile.am  appearance.page  basics.page  choose-opponent.page  controls-change.page  controls-default.page  gnect-C.omf  gnect.sgml  gnect.xml  index.docbook  index.page  make-easy.page  scores.page  sound-animation.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/hu/: hu.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
pixmaps/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  (+54 more)
src/: .cvsignore  .gitignore  Makefile.am  adaptative-window.vala  adjmtrx.c  ai.vala  arrow.vala  bintree.c  brain.c  brain.h  config.vapi  connect4.c  connect4.h  connectx_client.c  connectx_client.h  dialog.c  dialog.h  evaluate.c  four-in-a-row.gresource.xml  four-in-a-row.vala  game-actionbar.vala  game-board-view.vala  game-board.vala  game-window.vala  games-controls-list.vala  games-controls.c  games-controls.vala  games-controls2.vala  games-fullscreen-action.c  games-fullscreen-action.h  games-gridframe.c  games-gridframe.h  games-stock.c  games-stock.h  gfx.c  gfx.h  gfx.vala  gfx2.vala  ggz-network.c  ggz-network.h  (+35 more)
src/vapi/: config.vapi
