@YELP_HELP_RULES@
HELP_ID = four-in-a-row

HELP_MEDIA = \
	figures/mainwindow.png \
	figures/tileset.png \
	figures/logo.png

HELP_FILES = \
	appearance.page \
	basics.page \
	choose-opponent.page \
	controls-change.page \
	controls-default.page \
	index.page \
	make-easy.page \
	scores.page \
	sound-animation.page \
	legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fi fr it oc pt_BR sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
