help_media = [
    'figures/logo.png'
]

help_pages = [
    'appearance.page',
    'basics.page',
    'choose-opponent.page',
    'controls-default.page',
    'index.page',
    'legal.xml',
    'make-easy.page',
    'scores.page',
    'sound-animation.page'
]

gnome.yelp(meson.project_name(),
    sources: help_pages,
    media: help_media,
    symlink_media: true
)
