pixmapdir = $(datadir)/pixmaps/gnect

pixmap_DATA = \
	tileset_50x50_clean.png \
	tileset_50x50_classic.png \
	tileset_50x50_catseyes.png \
	tileset_50x50_square.png \
	tileset_50x50_glassy.png \
	tileset_40x40_clean.png \
	tileset_40x40_classic.png \
	tileset_40x40_catseyes.png \
	tileset_45x45_safari.png \
	tileset_40x40_square.png \
	tileset_40x40_glassy.png \
	tileset_48x32_emulator.png \
	bg_grotty.jpg \
	bg_nightfall.jpg \
	gnect-about.png


icondir   = $(datadir)/pixmaps
icon_DATA = gnect-icon.png

EXTRA_DIST = $(pixmap_DATA) $(icon_DATA)

