pixmapdir = $(datadir)/pixmaps/gnect

pixmap_DATA = \
    tileset_50x50_classic.png \
    tileset_50x50_catseyes.png \
    tileset_50x50_square.png \
    tileset_50x50_glassy.png \
    tileset_50x50_hcontrast.png \
    bg_grotty.jpg \
    bg_nightfall.jpg \
    bg_toplight.png

icondir   = $(datadir)/pixmaps
icon_DATA = gnect-icon.png

EXTRA_DIST = $(pixmap_DATA) $(icon_DATA)

